...
                    setState(() {
                      tempSelectedLocations.clear();
                    });
                  },
                ),
                TextButton(
                  child: const Text('Cancel'),
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                ),
                TextButton(
                  child: const Text('Apply'),
                  onPressed: () {
                    Navigator.of(context).pop(tempSelectedLocations);
                  },
                ),
              ],
            );
...
  }

  // Helper method to get names of selected locations
  Future<String> _getSelectedLocationNames() async {
    if (widget.selectedLocationIds == null ||
        widget.selectedLocationIds!.isEmpty) {
      return "Locations";
    }

    List<String> locationNames = [];

    for (int locationId in widget.selectedLocationIds!) {
      try {
...
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          if (isDateAfterActive)
            SizedBox(
              width: buttonWidth,
              child: buildDateFilterButton(
                'Created After',
                widget.selectedDateAfter,
                true,
                () => showDateAfterPicker(context),
                () {
                  setState(() {
                    isDateAfterActive = false;
...
            SizedBox(width: buttonWidth),
          const SizedBox(width: 8),
          if (isDateBeforeActive)
            SizedBox(
              width: buttonWidth,
              child: buildDateFilterButton(
                'Created Before',
                widget.selectedDateBefore,
                true,
                () => showDateBeforePicker(context),
                () {
                  setState(() {
                    isDateBeforeActive = false;
...
        },
        child: Row(
          mainAxisSize: MainAxisSize.min,
          children: const [
            Icon(Icons.add, color: Colors.black54),
            SizedBox(width: 4),
            Text("Add filter", style: TextStyle(color: Colors.black54)),
          ],
        ),
      ),
    );
  }

...
    );

    showDialog(
      context: context,
      builder: (BuildContext context) {
        return AlertDialog(
          title: Text('Select Filter', style: titleStyle),
          shape: RoundedRectangleBorder(
            borderRadius: BorderRadius.circular(10.0),
          ),
          content: Container(
            width: buttonWidth,
            constraints: const BoxConstraints(
...
                  ],
                  if (availableAttributes.isNotEmpty) ...[
                    const Padding(
                      padding:
                          EdgeInsets.symmetric(horizontal: 16.0, vertical: 8.0),
                      child: Text(
                        "Attribute Filters",
                        style: TextStyle(
                          fontWeight: FontWeight.bold,
                          color: Colors.black54,
                        ),
                      ),
                    ),
...
