...
  }

  String getSortText() {
    String criteriaText;
    switch (currentSortCriteria) {
      case SortCriteria.name:
        criteriaText = "Name";
        break;
      case SortCriteria.createdAt:
        criteriaText = "Created";
        break;
      case SortCriteria.updatedAt:
        criteriaText = "Modified";
...
    showDialog(
      context: context,
      builder: (BuildContext context) {
        return AlertDialog(
          title: Text(currentLocation == null
              ? "Create New Location"
              : "Create New Sublocation"),
          content: SingleChildScrollView(
            child: Column(
              mainAxisSize: MainAxisSize.min,
              children: [
                TextField(
                  controller: _nameController,
...
                    hintText: "Enter location name",
                  ),
                ),
                TextField(
                  controller: _capacityController,
                  decoration: const InputDecoration(
                    labelText: "Capacity",
                    hintText: "Enter location capacity",
                  ),
                  keyboardType: TextInputType.number,
                ),
                TextField(
                  controller: _descriptionController,
                  decoration: const InputDecoration(
                    labelText: "Description",
                    hintText: "Enter location description",
                  ),
                  maxLines: 3,
                ),
              ],
            ),
...
            ),
            TextButton(
              onPressed: () {
                createLocation();
                Navigator.of(context).pop();
              },
              child: const Text("Create"),
            ),
          ],
        );
      },
    );
  }
...
